--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,49 +1,15 @@
-# This workflow will build and push the Docker image to GitHub Container Registry (ghcr.io)
-# Adapted to match the migration pattern from coolcow/docker-duplicity and docker-entrypoints
-name: Build and Publish Docker image
+name: Build and Publish
 
 on:
   push:
-    branches: [ main ]
+    branches: [ 'main' ]
+    tags: [ 'v*.*.*' ]
   pull_request:
-    branches: [ main ]
-  workflow_dispatch:
+    branches: [ 'main' ]
 
 jobs:
-  build-and-push:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Extract metadata (tags, labels)
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ghcr.io/coolcow/rclone-cron
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./build/Dockerfile
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+  call-reusable-workflow:
+    uses: coolcow/workflows/.github/workflows/build-and-publish.yml@v1.0.0
+    with:
+      image_name: 'rclone-cron'
+    secrets: inherit
